--- a/infrastructure/template.yaml
+++ b/infrastructure/template.yaml
@@ -30,10 +30,7 @@ Resources:
       KeySchema:
         - AttributeName: itemId
           KeyType: HASH
-      BillingMode: PROVISIONED
-      ProvisionedThroughput:
-        ReadCapacityUnits: 5
-        WriteCapacityUnits: 5
+      BillingMode: PAY_PER_REQUEST
 
   RecipesTable:
     Type: AWS::DynamoDB::Table
@@ -45,10 +42,7 @@ Resources:
       KeySchema:
         - AttributeName: recipeId
           KeyType: HASH
-      BillingMode: PROVISIONED
-      ProvisionedThroughput:
-        ReadCapacityUnits: 5
-        WriteCapacityUnits: 5
+      BillingMode: PAY_PER_REQUEST
 
   # API Gateway
   MyHomeBarApi:
